Fixed features text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ body{
 .feature p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:600;
+    text-align: center;
 }
 
 .quote-panel{
